cact-front-end/autogen/src/CactParser.cpp

#include <cact-front-end/cact-expr.h>
#include <cact-front-end/mystl/observer_ptr.h>
#include <cact-front-end/symbol-registry.h>


// Generated from ./grammar/CactParser.g4 by ANTLR 4.13.1


#include "CactParserVisitor.h"

#include "CactParser.h"


using namespace antlrcpp;
using namespace cactparser;

using namespace antlr4;

namespace {

struct CactParserStaticData final {
  CactParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CactParserStaticData(const CactParserStaticData&) = delete;
  CactParserStaticData(CactParserStaticData&&) = delete;
  CactParserStaticData& operator=(const CactParserStaticData&) = delete;
  CactParserStaticData& operator=(CactParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag cactparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CactParserStaticData *cactparserParserStaticData = nullptr;

void cactparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (cactparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(cactparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CactParserStaticData>(
    std::vector<std::string>{
      "compilationUnit", "declaration", "constantDeclaration", "basicType", 
      "constantDefinition", "constantInitialValue", "variableDeclaration", 
      "variableDefinition", "functionDefinition", "functionType", "functionFormalParams", 
      "functionFormalParam", "block", "blockItem", "statement", "assignStatement", 
      "expressionStatement", "returnStatement", "ifStatement", "whileStatement", 
      "breakStatement", "continueStatement", "expression", "constantExpression", 
      "condition", "leftValue", "primaryExpression", "number", "unaryExpression", 
      "functionRealParams", "mulExpression", "addExpression", "relationalExpression", 
      "logicalEqualExpression", "logicalAndExpression", "logicalOrExpression"
    },
    std::vector<std::string>{
      "", "'int'", "'float'", "'double'", "'bool'", "'void'", "'const'", 
      "'return'", "'if'", "'else'", "'while'", "'break'", "'continue'", 
      "'='", "'=='", "'&&'", "'||'", "'!='", "'<'", "'<='", "'>'", "'>='", 
      "'.'", "','", "';'", "':'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
      "'+'", "'-'", "'|'", "'!'", "'*'", "'/'", "'%'"
    },
    std::vector<std::string>{
      "", "Int32", "Float", "Double", "Bool", "Void", "Const", "Return", 
      "If", "Else", "While", "Break", "Continue", "Equal", "LogicalEqual", 
      "LogicalAnd", "LogicalOr", "NotEqual", "Less", "LessEqual", "Greater", 
      "GreaterEqual", "Period", "Comma", "Semicolon", "Colon", "LeftParenthesis", 
      "RightParenthesis", "LeftBracket", "RightBracket", "LeftBrace", "RightBrace", 
      "Plus", "Minus", "Pipe", "ExclamationMark", "Asterisk", "Slash", "Percent", 
      "Identifier", "IntegerConstant", "FloatConstant", "DoubleConstant", 
      "BooleanConstant", "LineComment", "BlockComment", "NewLine", "WhiteSpaces"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  cactparserParserStaticData = staticData.release();
}

}

CactParser::CactParser(TokenStream *input) : CactParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CactParser::CactParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CactParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *cactparserParserStaticData->atn, cactparserParserStaticData->decisionToDFA, cactparserParserStaticData->sharedContextCache, options);
}

CactParser::~CactParser() {
  delete _interpreter;
}

const atn::ATN& CactParser::getATN() const {
  return *cactparserParserStaticData->atn;
}

std::string CactParser::getGrammarFileName() const {
  return "CactParser.g4";
}

const std::vector<std::string>& CactParser::getRuleNames() const {
  return cactparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& CactParser::getVocabulary() const {
  return cactparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CactParser::getSerializedATN() const {
  return cactparserParserStaticData->serializedATN;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

CactParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CactParser::DeclarationContext *> CactParser::CompilationUnitContext::declaration() {
  return getRuleContexts<CactParser::DeclarationContext>();
}

CactParser::DeclarationContext* CactParser::CompilationUnitContext::declaration(size_t i) {
  return getRuleContext<CactParser::DeclarationContext>(i);
}

std::vector<CactParser::FunctionDefinitionContext *> CactParser::CompilationUnitContext::functionDefinition() {
  return getRuleContexts<CactParser::FunctionDefinitionContext>();
}

CactParser::FunctionDefinitionContext* CactParser::CompilationUnitContext::functionDefinition(size_t i) {
  return getRuleContext<CactParser::FunctionDefinitionContext>(i);
}


size_t CactParser::CompilationUnitContext::getRuleIndex() const {
  return CactParser::RuleCompilationUnit;
}


std::any CactParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CactParserVisitor*>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

CactParser::CompilationUnitContext* CactParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, CactParser::RuleCompilationUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 126) != 0)) {
      setState(74);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(72);
        declaration();
        break;
      }

      case 2: {
        setState(73);
        functionDefinition();
        break;
      }

      default:
        break;
      }
      setState(78);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

CactParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CactParser::ConstantDeclarationContext* CactParser::DeclarationContext::constantDeclaration() {
  return getRuleContext<CactParser::ConstantDeclarationContext>(0);
}

CactParser::VariableDeclarationContext* CactParser::DeclarationContext::variableDeclaration() {
  return getRuleContext<CactParser::VariableDeclarationContext>(0);
}


size_t CactParser::DeclarationContext::getRuleIndex() const {
  return CactParser::RuleDeclaration;
}


std::any CactParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CactParserVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

CactParser::DeclarationContext* CactParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, CactParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(81);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CactParser::Const: {
        enterOuterAlt(_localctx, 1);
        setState(79);
        constantDeclaration();
        break;
      }

      case CactParser::Int32:
      case CactParser::Float:
      case CactParser::Double:
      case CactParser::Bool: {
        enterOuterAlt(_localctx, 2);
        setState(80);
        variableDeclaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantDeclarationContext ------------------------------------------------------------------

CactParser::ConstantDeclarationContext::ConstantDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CactParser::ConstantDeclarationContext::Const() {
  return getToken(CactParser::Const, 0);
}

CactParser::BasicTypeContext* CactParser::ConstantDeclarationContext::basicType() {
  return getRuleContext<CactParser::BasicTypeContext>(0);
}

std::vector<CactParser::ConstantDefinitionContext *> CactParser::ConstantDeclarationContext::constantDefinition() {
  return getRuleContexts<CactParser::ConstantDefinitionContext>();
}

CactParser::ConstantDefinitionContext* CactParser::ConstantDeclarationContext::constantDefinition(size_t i) {
  return getRuleContext<CactParser::ConstantDefinitionContext>(i);
}

tree::TerminalNode* CactParser::ConstantDeclarationContext::Semicolon() {
  return getToken(CactParser::Semicolon, 0);
}

std::vector<tree::TerminalNode *> CactParser::ConstantDeclarationContext::Comma() {
  return getTokens(CactParser::Comma);
}

tree::TerminalNode* CactParser::ConstantDeclarationContext::Comma(size_t i) {
  return getToken(CactParser::Comma, i);
}


size_t CactParser::ConstantDeclarationContext::getRuleIndex() const {
  return CactParser::RuleConstantDeclaration;
}


std::any CactParser::ConstantDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CactParserVisitor*>(visitor))
    return parserVisitor->visitConstantDeclaration(this);
  else
    return visitor->visitChildren(this);
}

CactParser::ConstantDeclarationContext* CactParser::constantDeclaration() {
  ConstantDeclarationContext *_localctx = _tracker.createInstance<ConstantDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, CactParser::RuleConstantDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(CactParser::Const);
    setState(84);
    basicType();
    setState(85);
    constantDefinition();
    setState(90);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CactParser::Comma) {
      setState(86);
      match(CactParser::Comma);
      setState(87);
      constantDefinition();
      setState(92);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(93);
    match(CactParser::Semicolon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BasicTypeContext ------------------------------------------------------------------

CactParser::BasicTypeContext::BasicTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CactParser::BasicTypeContext::Int32() {
  return getToken(CactParser::Int32, 0);
}

tree::TerminalNode* CactParser::BasicTypeContext::Bool() {
  return getToken(CactParser::Bool, 0);
}

tree::TerminalNode* CactParser::BasicTypeContext::Float() {
  return getToken(CactParser::Float, 0);
}

tree::TerminalNode* CactParser::BasicTypeContext::Double() {
  return getToken(CactParser::Double, 0);
}


size_t CactParser::BasicTypeContext::getRuleIndex() const {
  return CactParser::RuleBasicType;
}


std::any CactParser::BasicTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CactParserVisitor*>(visitor))
    return parserVisitor->visitBasicType(this);
  else
    return visitor->visitChildren(this);
}

CactParser::BasicTypeContext* CactParser::basicType() {
  BasicTypeContext *_localctx = _tracker.createInstance<BasicTypeContext>(_ctx, getState());
  enterRule(_localctx, 6, CactParser::RuleBasicType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 30) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantDefinitionContext ------------------------------------------------------------------

CactParser::ConstantDefinitionContext::ConstantDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CactParser::ConstantDefinitionContext::Identifier() {
  return getToken(CactParser::Identifier, 0);
}

tree::TerminalNode* CactParser::ConstantDefinitionContext::Equal() {
  return getToken(CactParser::Equal, 0);
}

CactParser::ConstantInitialValueContext* CactParser::ConstantDefinitionContext::constantInitialValue() {
  return getRuleContext<CactParser::ConstantInitialValueContext>(0);
}

std::vector<tree::TerminalNode *> CactParser::ConstantDefinitionContext::LeftBracket() {
  return getTokens(CactParser::LeftBracket);
}

tree::TerminalNode* CactParser::ConstantDefinitionContext::LeftBracket(size_t i) {
  return getToken(CactParser::LeftBracket, i);
}

std::vector<tree::TerminalNode *> CactParser::ConstantDefinitionContext::IntegerConstant() {
  return getTokens(CactParser::IntegerConstant);
}

tree::TerminalNode* CactParser::ConstantDefinitionContext::IntegerConstant(size_t i) {
  return getToken(CactParser::IntegerConstant, i);
}

std::vector<tree::TerminalNode *> CactParser::ConstantDefinitionContext::RightBracket() {
  return getTokens(CactParser::RightBracket);
}

tree::TerminalNode* CactParser::ConstantDefinitionContext::RightBracket(size_t i) {
  return getToken(CactParser::RightBracket, i);
}


size_t CactParser::ConstantDefinitionContext::getRuleIndex() const {
  return CactParser::RuleConstantDefinition;
}


std::any CactParser::ConstantDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CactParserVisitor*>(visitor))
    return parserVisitor->visitConstantDefinition(this);
  else
    return visitor->visitChildren(this);
}

CactParser::ConstantDefinitionContext* CactParser::constantDefinition() {
  ConstantDefinitionContext *_localctx = _tracker.createInstance<ConstantDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 8, CactParser::RuleConstantDefinition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    match(CactParser::Identifier);
    setState(103);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CactParser::LeftBracket) {
      setState(98);
      match(CactParser::LeftBracket);
      setState(99);
      match(CactParser::IntegerConstant);
      setState(100);
      match(CactParser::RightBracket);
      setState(105);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(106);
    match(CactParser::Equal);
    setState(107);
    constantInitialValue();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantInitialValueContext ------------------------------------------------------------------

CactParser::ConstantInitialValueContext::ConstantInitialValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CactParser::ConstantExpressionContext* CactParser::ConstantInitialValueContext::constantExpression() {
  return getRuleContext<CactParser::ConstantExpressionContext>(0);
}

tree::TerminalNode* CactParser::ConstantInitialValueContext::LeftBrace() {
  return getToken(CactParser::LeftBrace, 0);
}

tree::TerminalNode* CactParser::ConstantInitialValueContext::RightBrace() {
  return getToken(CactParser::RightBrace, 0);
}

std::vector<CactParser::ConstantInitialValueContext *> CactParser::ConstantInitialValueContext::constantInitialValue() {
  return getRuleContexts<CactParser::ConstantInitialValueContext>();
}

CactParser::ConstantInitialValueContext* CactParser::ConstantInitialValueContext::constantInitialValue(size_t i) {
  return getRuleContext<CactParser::ConstantInitialValueContext>(i);
}

std::vector<tree::TerminalNode *> CactParser::ConstantInitialValueContext::Comma() {
  return getTokens(CactParser::Comma);
}

tree::TerminalNode* CactParser::ConstantInitialValueContext::Comma(size_t i) {
  return getToken(CactParser::Comma, i);
}


size_t CactParser::ConstantInitialValueContext::getRuleIndex() const {
  return CactParser::RuleConstantInitialValue;
}


std::any CactParser::ConstantInitialValueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CactParserVisitor*>(visitor))
    return parserVisitor->visitConstantInitialValue(this);
  else
    return visitor->visitChildren(this);
}

CactParser::ConstantInitialValueContext* CactParser::constantInitialValue() {
  ConstantInitialValueContext *_localctx = _tracker.createInstance<ConstantInitialValueContext>(_ctx, getState());
  enterRule(_localctx, 10, CactParser::RuleConstantInitialValue);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(122);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CactParser::IntegerConstant:
      case CactParser::FloatConstant:
      case CactParser::DoubleConstant:
      case CactParser::BooleanConstant: {
        enterOuterAlt(_localctx, 1);
        setState(109);
        constantExpression();
        break;
      }

      case CactParser::LeftBrace: {
        enterOuterAlt(_localctx, 2);
        setState(110);
        match(CactParser::LeftBrace);
        setState(119);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 16493748158464) != 0)) {
          setState(111);
          constantInitialValue();
          setState(116);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == CactParser::Comma) {
            setState(112);
            match(CactParser::Comma);
            setState(113);
            constantInitialValue();
            setState(118);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(121);
        match(CactParser::RightBrace);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

CactParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CactParser::BasicTypeContext* CactParser::VariableDeclarationContext::basicType() {
  return getRuleContext<CactParser::BasicTypeContext>(0);
}

std::vector<CactParser::VariableDefinitionContext *> CactParser::VariableDeclarationContext::variableDefinition() {
  return getRuleContexts<CactParser::VariableDefinitionContext>();
}

CactParser::VariableDefinitionContext* CactParser::VariableDeclarationContext::variableDefinition(size_t i) {
  return getRuleContext<CactParser::VariableDefinitionContext>(i);
}

tree::TerminalNode* CactParser::VariableDeclarationContext::Semicolon() {
  return getToken(CactParser::Semicolon, 0);
}

std::vector<tree::TerminalNode *> CactParser::VariableDeclarationContext::Comma() {
  return getTokens(CactParser::Comma);
}

tree::TerminalNode* CactParser::VariableDeclarationContext::Comma(size_t i) {
  return getToken(CactParser::Comma, i);
}


size_t CactParser::VariableDeclarationContext::getRuleIndex() const {
  return CactParser::RuleVariableDeclaration;
}


std::any CactParser::VariableDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CactParserVisitor*>(visitor))
    return parserVisitor->visitVariableDeclaration(this);
  else
    return visitor->visitChildren(this);
}

CactParser::VariableDeclarationContext* CactParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 12, CactParser::RuleVariableDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(124);
    basicType();
    setState(125);
    variableDefinition();
    setState(130);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CactParser::Comma) {
      setState(126);
      match(CactParser::Comma);
      setState(127);
      variableDefinition();
      setState(132);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(133);
    match(CactParser::Semicolon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDefinitionContext ------------------------------------------------------------------

CactParser::VariableDefinitionContext::VariableDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CactParser::VariableDefinitionContext::Identifier() {
  return getToken(CactParser::Identifier, 0);
}

std::vector<tree::TerminalNode *> CactParser::VariableDefinitionContext::LeftBracket() {
  return getTokens(CactParser::LeftBracket);
}

tree::TerminalNode* CactParser::VariableDefinitionContext::LeftBracket(size_t i) {
  return getToken(CactParser::LeftBracket, i);
}

std::vector<tree::TerminalNode *> CactParser::VariableDefinitionContext::IntegerConstant() {
  return getTokens(CactParser::IntegerConstant);
}

tree::TerminalNode* CactParser::VariableDefinitionContext::IntegerConstant(size_t i) {
  return getToken(CactParser::IntegerConstant, i);
}

std::vector<tree::TerminalNode *> CactParser::VariableDefinitionContext::RightBracket() {
  return getTokens(CactParser::RightBracket);
}

tree::TerminalNode* CactParser::VariableDefinitionContext::RightBracket(size_t i) {
  return getToken(CactParser::RightBracket, i);
}

tree::TerminalNode* CactParser::VariableDefinitionContext::Equal() {
  return getToken(CactParser::Equal, 0);
}
